manifests/applications/network-configs/virtualservice-argocd.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: test-app
spec:
  hosts:
    - "zaap.nandi.sh"
  gateways:
    - istio-system/ingress-gateway
  http:
    - match:
        - uri:
            prefix: /test-app
      rewrite:
        uri: /        
      route:
        - destination:
            host: nginx
            port:
              number: 80
