manifests/applications/network-configs/virtualservice-testapp.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-server
  namespace: argocd
spec:
  hosts:
    - "zaap.nandi.sh"
  gateways:
    - istio-system/ingress-gateway
  http:
    - match:
        - uri:
            prefix: /argocd
      rewrite:
        uri: /    
      route:
        - destination:
            host: argocd-server
            port:
              number: 80
    - match:
        - uri:
            prefix: /api/dex
      rewrite:
        uri: /
      route:
        - destination:
            host: argocd-dex-server
            port:
              number: 80
